[package]
name = "relay-tester"
version = "0.1.0"
authors = ["Paul Colusso <paulcolusso@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.41"
log = "0.4.14"
pretty_env_logger = "0.4.0"
reqwest = "0.11.4"
tokio = { version = "1.7.1", features = ["full"] }
warp = "0.3.1"
